# property-management-system

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  lint.yml  pms-ci.yml  test.yml
nginx/: nginx.conf
nginx/conf.d/: app.conf
property_management_system/: .env.dist
property_management_system/core/: asgi.py  mixins.py  settings.py  urls.py
property_management_system/dashboard/: factories.py  models.py  urls.py
property_management_system/leases/: factories.py  models.py
property_management_system/maintenance/: factories.py  models.py
property_management_system/messaging/: factories.py  models.py  urls.py  views.py
property_management_system/notifications/: admin.py  factories.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
property_management_system/properties/: factories.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
property_management_system/property_management_system/: asgi.py  settings.py  urls.py  wsgi.py
property_management_system/users/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
soft-ui-dashboard-main/: index.html  package.json
soft-ui-dashboard-main/docs/: documentation.html
src/: celerybeat-schedule-shm  celerybeat-schedule-wal
src/core/: celery.py  compile_messages.py  settings.py  tasks.py  urls.py  wsgi.py
src/dashboard/: admin.py  factories.py  forms.py  models.py  tax.py  urls.py  views.py
(+130 files in other folders)
